fixed navbar alignment

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ background-color: #6d1b6c;
 }
 
 .navbar-brand{
-margin-top: 0px;
+margin-top: -3px;
 }
 
 .navbar span.navbar-toggler-icon {
